package com.trihieu.strategy;
public interface PaymentStrategy {
    boolean pay(double amount);
}
